# Samurai-Sudoku-Generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/samurai_sudoku/: __init__.py  cli.py  dlx9.py  generator.py  geometry.py  model.py  pdf.py  solver.py
tests/: test_smoke.py
